--- a/sass/abstracts/_tokens.scss
+++ b/sass/abstracts/_tokens.scss
@@ -2,11 +2,11 @@
 @use "typography" as *;
 @use "sizes" as *;
 
-$active-theme: $light;
+$active-theme: $default;
 $enable-media-query-dark-mode: false;
 
 // Contextual
-$color-text-default: $color-neutral-700;
+$color-text-default: $color-neutral-500;
 $color-background-default: $color-primary-100;
 $color-text-interactive-default: $color-accent-400;
 $color-text-interactive-hover: $color-accent-500;
@@ -15,7 +15,7 @@ $color-text-interactive-hover: $color-accent-500;
 $letter-spacing-loose: 0;
 
 $border-radius-1: $size-2;
-$border-radius-2: $size-4;
+$border-radius-2: 0.625rem;
 
 $box-shadow-1: 0px 6px 5px rgb(0, 0, 0, 0.012),
   0px 22px 18px rgb(0, 0, 0, 0.018), 0px 100px 80px rgb(0, 0, 0, 0.03);
@@ -35,7 +35,7 @@ $box-shadow-5: 0px 6px 5px rgb(0, 0, 0, 0.04), 0px 22px 18px rgb(0, 0, 0, 0.06),
 // body
 $body-font-family: $font-family-base;
 $body-font-size: $font-size-400;
-$body-line-height: 1.5;
+$body-line-height: 1.64;
 $body-font-weight: $font-weight-default;
 $body-text-color: $color-text-default;
 $body-background-color: $color-background-default;
@@ -44,17 +44,17 @@ $link-color: $color-text-interactive-default;
 $link-color-hover: $color-text-interactive-hover;
 
 $heading-font-family: $font-family-accent;
-$heading-color-default: $color-neutral-900;
+$heading-color-default: $color-neutral-800;
 $heading-font-weight: $font-weight-bold;
 $heading-letter-spacing: $letter-spacing-loose;
-$heading-line-height: 1.1;
-$heading-text-transform: uppercase;
+$heading-line-height: 1;
+$heading-text-transform: none;
 
-$heading-1-font-size: $font-size-900;
+$heading-1-font-size: $font-size-800;
 $heading-1-color: $heading-color-default;
-$heading-2-font-size: $font-size-800;
+$heading-2-font-size: $font-size-700;
 $heading-2-color: $heading-color-default;
-$heading-3-font-size: $font-size-700;
+$heading-3-font-size: $font-size-600;
 $heading-3-color: $heading-color-default;
 
 // layout
@@ -97,53 +97,57 @@ $footer-link-text-decoration: none;
 
 // buttons
 $button-font-family: $body-font-family;
-$button-font-size: $font-size-400;
+$button-font-size: $font-size-100;
 $button-font-weight: $font-weight-bold;
-$button-text-transform: uppercase;
-$button-padding: 0.75em 2em;
+$button-text-transform: none;
+$button-padding: 1em 3em;
 $button-border: 0;
 $button-border-radius: $border-radius-1;
 
 $button-accent-color: $color-neutral-100;
-$button-accent-background: $color-accent-400;
+$button-accent-background: $color-accent-600;
 $button-accent-color-hover: $color-neutral-100;
-$button-accent-background-hover: $color-accent-500;
+$button-accent-background-hover: $color-accent-800;
 $button-primary-color: $color-neutral-100;
 $button-primary-background: $color-primary-700;
 $button-primary-color-hover: $color-neutral-100;
 $button-primary-background-hover: $color-primary-800;
 
 // cards
-$card-flow-spacing: $size-2;
-$card-padding: $size-8;
+$card-flow-spacing: 0;
+$card-padding: 0;
 $card-shadow: $box-shadow-1;
 $card-border-radius: $border-radius-2;
 $card-background-default: $color-primary-100;
 $card-color-default: $body-text-color;
 $card-font-family: $body-font-family;
-$card-line-height: 1.25;
+$card-line-height: $body-line-height;
 $card-heading-color-default: $card-color-default;
 $card-heading-font-size: $font-size-600;
 
+$card-body-padding: $size-6;
+$card-body-gap: 1rem;
+$card-body-padding-large: $size-8;
+
 // forms
-$form-label-color: $body-text-color;
-$form-label-font-family: $body-font-family;
-$form-label-font-weight: $font-weight-bold;
-$form-label-font-size: $body-font-size;
+// $form-label-color: $body-text-color;
+// $form-label-font-family: $body-font-family;
+// $form-label-font-weight: $font-weight-bold;
+// $form-label-font-size: $body-font-size;
 
-$form-input-color: $body-text-color;
-$form-input-font-family: $body-font-family;
-$form-input-font-weight: $font-weight-semi-bold;
-$form-input-font-size: $body-font-size;
-$form-input-background-color: $color-neutral-100;
-$form-input-border-default: 3px solid $color-primary-200;
-$form-input-border-focus: 3px solid $color-primary-400;
-$form-input-padding: $size-3;
-$form-input-border-radius: $border-radius-1;
+// $form-input-color: $body-text-color;
+// $form-input-font-family: $body-font-family;
+// $form-input-font-weight: $font-weight-semi-bold;
+// $form-input-font-size: $body-font-size;
+// $form-input-background-color: $color-neutral-100;
+// $form-input-border-default: 3px solid $color-primary-200;
+// $form-input-border-focus: 3px solid $color-primary-400;
+// $form-input-padding: $size-3;
+// $form-input-border-radius: $border-radius-1;
 
-$form-placeholder-color: $color-primary-300;
-$form-placeholder-font-family: $form-input-font-family;
-$form-placeholder-font-weight: $form-input-font-weight;
-$form-placeholder-font-size: $body-font-size;
+// $form-placeholder-color: $color-primary-300;
+// $form-placeholder-font-family: $form-input-font-family;
+// $form-placeholder-font-weight: $form-input-font-weight;
+// $form-placeholder-font-size: $body-font-size;
 
-$form-group-spacing: 0.5rem;
+// $form-group-spacing: 0.5rem;
