--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -7,6 +7,11 @@ body {
   color: $body-text-color;
   background-color: $body-background-color;
   line-height: $body-line-height;
+
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  margin-inline: 1rem;
 }
 
 a {
