--- a/sass/abstracts/_tokens.scss
+++ b/sass/abstracts/_tokens.scss
@@ -118,7 +118,7 @@ $card-flow-spacing: 0;
 $card-padding: 0;
 $card-shadow: $box-shadow-1;
 $card-border-radius: $border-radius-2;
-$card-background-default: $color-primary-100;
+$card-background-default: $color-neutral-000;
 $card-color-default: $body-text-color;
 $card-font-family: $body-font-family;
 $card-line-height: $body-line-height;
